cmake_minimum_required(VERSION 3.0.0)
project(LearnOpenGL VERSION 0.1.0)

set(GLFW_DIR "/opt/homebrew/Cellar/glfw/3.3.8")
set(GLAD_DIR "~/Deps/glad/glad3.3")
set(UTILS_DIR "${PROJECT_SOURCE_DIR}/Utils")
set(GLM_DIR "~/Deps/glm/glm-0.9.8.5")

add_subdirectory(Utils)
add_subdirectory(CreateWindow)
add_subdirectory(DrawTriangle)
add_subdirectory(ShaderPractice)
add_subdirectory(TexturePractice)
add_subdirectory(MatrixPractice)
add_subdirectory(CoordinateSystems)
add_subdirectory(CameraPractice)
add_subdirectory(Colors)